--- a/learning/20170619.md
+++ b/learning/20170619.md
@@ -1,1 +1,4 @@
-## uuu
+## 学习过程
+1.开始在MySQLworkpench下建立 information school score course 四个表    
+2.与数据库stu进行连接，由于建的时候有外键，所以出现很多问题    
+3.对数据库的增删改查进行修改    
